Ensure sudoku board cell text is vertically and horizontally aligned

--- a/static/sudokugame/board-style.css
+++ b/static/sudokugame/board-style.css
@@ -3,19 +3,19 @@ body {
 }
 
 #sudoku_board {
-    /* box-shadow: 0px 0px 5px 5px #bdc3c7; */
     box-shadow: 0 0 5px 5px black;
-    width:30%;
+    width:35%;
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     margin: auto;
 }
 
 .cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: white;
-    text-align: center;
     font-size: 2.5vw;
-    vertical-align: middle;
     border: 1px solid lightgray;
     box-sizing: content-box;
     caret-color: transparent;
